--- a/index.html
+++ b/index.html
@@ -3510,7 +3510,7 @@ border: 0;
 </details>
 <div class="cell-output-display">
 
-<div id="fyvpvdfbgr" style="padding-left:0px;padding-right:0px;padding-top:10px;padding-bottom:10px;overflow-x:auto;overflow-y:auto;width:auto;height:auto;">
+<div id="sbhxsuuihr" style="padding-left:0px;padding-right:0px;padding-top:10px;padding-bottom:10px;overflow-x:auto;overflow-y:auto;width:auto;height:auto;">
   
   <table class="gt_table" data-quarto-disable-processing="false" data-quarto-bootstrap="false" style="-webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; font-family: system-ui, &#39;Segoe UI&#39;, Roboto, Helvetica, Arial, sans-serif, &#39;Apple Color Emoji&#39;, &#39;Segoe UI Emoji&#39;, &#39;Segoe UI Symbol&#39;, &#39;Noto Color Emoji&#39;; display: table; border-collapse: collapse; line-height: normal; margin-left: auto; margin-right: auto; color: #333333; font-size: 16px; font-weight: normal; font-style: normal; background-color: #FFFFFF; width: auto; border-top-style: solid; border-top-width: 2px; border-top-color: #A8A8A8; border-right-style: none; border-right-width: 2px; border-right-color: #D3D3D3; border-bottom-style: solid; border-bottom-width: 2px; border-bottom-color: #A8A8A8; border-left-style: none; border-left-width: 2px; border-left-color: #D3D3D3;" bgcolor="#FFFFFF">
   <thead style="border-style: none;">
@@ -4264,8 +4264,8 @@ GLOBAL         6968 10 &lt;2e-16</code></pre>
 </div>
 <p>Given the violation of assumptions observed in our stratified Cox Proportional Hazard Model, particularly in terms of non-proportional hazards for variables like Sex, Age, and Cancer_Group, we decided to refine our analysis by filtering on a specific cancer type, Thyroid Cancer. This strategic filtering allows us to explore the impact of this particular cancer type while potentially mitigating the observed violations.</p>
 </section>
-<section id="filtering-analysis-with-thyroid-cancer" class="level4">
-<h4 class="anchored" data-anchor-id="filtering-analysis-with-thyroid-cancer">Filtering Analysis with Thyroid Cancer</h4>
+<section id="filtered-analysis-with-thyroid-cancer" class="level4">
+<h4 class="anchored" data-anchor-id="filtered-analysis-with-thyroid-cancer">Filtered Analysis with Thyroid Cancer</h4>
 <div class="cell">
 <details>
 <summary>Code</summary>
@@ -4373,8 +4373,8 @@ GLOBAL        24.530  6 0.00042</code></pre>
 </div>
 <p>By filtering on Thyroid Cancer, we see that our p-values increase a little bit, but our assumptions remain violated. For the Schoenfeld Test the p-value for Race Category is .00042 indicating significant deviation from proportional hazards for Race Category within Thyroid Cancer. For Sex and Age, it has a p-value of .46600 and .09322, respectively. This shows that against a p-value of .05, it is not violating, however our global test emphasizes the challenge in maintaining proportional hazards assumptions within the strata. Based on this, we will use time dependent variables to see if it improves our model.</p>
 </section>
-<section id="time-dependent-analysis" class="level4">
-<h4 class="anchored" data-anchor-id="time-dependent-analysis">Time Dependent Analysis</h4>
+<section id="time-dependent-analysis-with-thyroid-cancer" class="level4">
+<h4 class="anchored" data-anchor-id="time-dependent-analysis-with-thyroid-cancer">Time Dependent Analysis with Thyroid Cancer</h4>
 <p>We decided to implement a time dependent covariates as stated above. This approach enables us to examine how the hazard ratios categories change over time, providing a better understanding of their impact on survival outcome. The tt function is used to create time-transformed variables for selected covariates.</p>
 <div class="cell">
 <details>
@@ -4509,8 +4509,8 @@ GLOBAL        24.530  6 0.00042</code></pre>
 </div>
 <p>The cox.zph() function does not support time-transformed terms. Nevertheless, we can visually inspect the Schoenfeld residuals through plots to identify trends or patterns that might indicate a violation of the proportional hazards assumption. Our visual examination suggests that the proportional hazards assumption is not met. Consequently, we will explore an alternative approach by incorporating interactions in our model.</p>
 </section>
-<section id="interaction-analysis" class="level4">
-<h4 class="anchored" data-anchor-id="interaction-analysis">Interaction Analysis</h4>
+<section id="interaction-analysis-with-thyroid-cancer" class="level4">
+<h4 class="anchored" data-anchor-id="interaction-analysis-with-thyroid-cancer">Interaction Analysis with Thyroid Cancer</h4>
 <p>In survival analysis, an interaction term is often used to assess whether the effect of one variable on the outcome is modified by the presence of another variable. It allows us to explore whether the combined influence of two variables is greater (or different) than the sum of their individual effects.</p>
 <div class="cell">
 <details>
@@ -4647,8 +4647,8 @@ GLOBAL            24.625 10 0.00610</code></pre>
 </div>
 <p>The overall or global test for the proportional hazards assumption (GLOBAL) combines all the variables and interactions. With a chi-squared test statistic of 24.625, 10 degrees of freedom, and a p-value of 0.00610, there’s evidence suggesting a violation of the proportional hazards assumption in the model among thyroid cancer cases. These results indicate that while some individual variables or interactions might not violate the assumption significantly(like Sex and Age), the model as a whole shows some evidence of departure from proportional hazards assumption among thyroid cancer patients. To further test this out I decided to use stratification in our next analysis.</p>
 </section>
-<section id="filtered-analysis-with-stratification" class="level4">
-<h4 class="anchored" data-anchor-id="filtered-analysis-with-stratification">Filtered Analysis with Stratification</h4>
+<section id="filtered-analysis-with-stratification-on-thyroid-cancer" class="level4">
+<h4 class="anchored" data-anchor-id="filtered-analysis-with-stratification-on-thyroid-cancer">Filtered Analysis with Stratification on Thyroid Cancer</h4>
 <div class="cell">
 <details>
 <summary>Code</summary>
@@ -4728,8 +4728,8 @@ GLOBAL 4.075  2 0.130</code></pre>
 </div>
 <p>For Sex, the p-value is 0.396, suggesting no statistically significant violation of the proportional hazards assumption. Regarding Age, the p-value is 0.054, indicating a borderline violation; however, it remains above 0.05. The GLOBAL p-value for the entire model is 0.130. Since this value exceeds 0.05, there is no strong statistical evidence against the assumption of proportional hazards for the model as a whole. Since our p-value went up when disregarding the race-category, we decided to further filter our dataset.</p>
 </section>
-<section id="filtering-analysis-on-cancer-and-race" class="level4">
-<h4 class="anchored" data-anchor-id="filtering-analysis-on-cancer-and-race">Filtering Analysis on Cancer and Race</h4>
+<section id="filtered-analysis-on-cancer-and-race-with-thyroid-cancer" class="level4">
+<h4 class="anchored" data-anchor-id="filtered-analysis-on-cancer-and-race-with-thyroid-cancer">Filtered Analysis on Cancer and Race with Thyroid Cancer</h4>
 <p>Below, we create a new variable called “Binary_Race” where we separate it into a binary variable” Black or other. This helps simplify the analysis and helps us dig deeper.</p>
 <div class="cell">
 <details>
@@ -4822,8 +4822,8 @@ GLOBAL      3.078  3 0.380</code></pre>
 </div>
 <p>The martingale residuals display a distribution centered around 0, indicating a reasonable fit of the Cox model to the data. The Schoenfeld residuals show that none of the variables significantly violate the proportional hazards assumption individually. The GLOBAL test reinforces this, suggesting that, collectively, the variables do not provide strong evidence against the proportional hazards assumption. By editing the Race_Category we found that our model improved overall.</p>
 </section>
-<section id="filter-analysis-with-renal-cancer" class="level4">
-<h4 class="anchored" data-anchor-id="filter-analysis-with-renal-cancer">Filter Analysis with Renal Cancer</h4>
+<section id="filtered-analysis-with-renal-cancer" class="level4">
+<h4 class="anchored" data-anchor-id="filtered-analysis-with-renal-cancer">Filtered Analysis with Renal Cancer</h4>
 <p>Below, we decided to do a similar analysis but focus on Renal Cancer, which was one of our more common cancer types among deceased patients.</p>
 <div class="cell">
 <details>
@@ -4933,8 +4933,8 @@ GLOBAL        72.44  6 1.3e-13</code></pre>
 <p>Sex shows no evidence of violating the proportional hazards assumption, both Race_Category and especially Age demonstrate substantial departures from the assumption. The global test confirms a significant violation, suggesting that the model doesn’t satisfy the assumption of constant hazard ratios over time for renal cancer cases.</p>
 <p>Given how many of our patients with renal cancer end up passing, it makes sense as to why our variables are statistically significant. We dug deeper and looked into stratifying our model to look at individual variables more closely.</p>
 </section>
-<section id="stratification-on-renal-cancer-analysis" class="level4">
-<h4 class="anchored" data-anchor-id="stratification-on-renal-cancer-analysis">Stratification on Renal Cancer Analysis</h4>
+<section id="stratification-analysis-on-renal-cancer" class="level4">
+<h4 class="anchored" data-anchor-id="stratification-analysis-on-renal-cancer">Stratification Analysis on Renal Cancer</h4>
 <div class="cell">
 <details>
 <summary>Code</summary>
@@ -5032,8 +5032,8 @@ GLOBAL        17.618  5 0.0035</code></pre>
 </div>
 <p>For sex we have a non-significant p-value of .3592, indicating no strong evidence of a departure from proportional hazards for the variable. However, for race_category we have a significant departure from proportional hazards. This indicates that the effect of race on survival time changes over time. Because of this low p-value we decided to use interaction terms as well to see how our model improves.</p>
 </section>
-<section id="interaction-term-with-renal-cancer" class="level4">
-<h4 class="anchored" data-anchor-id="interaction-term-with-renal-cancer">Interaction Term with Renal Cancer</h4>
+<section id="interaction-analysis-with-renal-cancer" class="level4">
+<h4 class="anchored" data-anchor-id="interaction-analysis-with-renal-cancer">Interaction Analysis with Renal Cancer</h4>
 <div class="cell">
 <details>
 <summary>Code</summary>
@@ -5158,7 +5158,9 @@ GLOBAL            20.817  9 0.0135</code></pre>
 </div>
 </div>
 <p>Based on our p-values for the Schoenfield Residual test, we are still violating the proportional hazards. Thus, we decided to do a similar approach as last time since Race_Category seems to be the issue. We decided to do the Binary_Race.</p>
-<p>####Binary Race for Renal Cancer Analysis</p>
+</section>
+<section id="filtering-analysis-on-race-with-renal-cancer" class="level4">
+<h4 class="anchored" data-anchor-id="filtering-analysis-on-race-with-renal-cancer">Filtering Analysis on Race with Renal Cancer</h4>
 <div class="cell">
 <details>
 <summary>Code</summary>
